# safe-push

./: .gitignore  README.md  pyproject.toml
safe_push/: cli.py  constants.py  license_manager.py  logger.py  patterns.py  patterns_premium.py
safe_push/scanner/: advanced.py  basic.py
